src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>AVB_Account_ID__c</fullName>
        <formula>Account.Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AVB Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVB_Associate_First_Last_Name__c</fullName>
        <label>AVB Associate (First &amp; Last Name)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVB_Type__c</fullName>
        <label>AVB Type</label>
        <picklist>
            <picklistValues>
                <fullName>Affordable Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Policies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated to Supervisor Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing Delinquency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Pursuit Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Notice Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move In Process-Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move Out Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move Out Process-Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prior Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resident Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Acknowledgement_of_Notice_to_Vacate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acknowledgement of Notice to Vacate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activate_Electronic_Devices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activate Electronic Devices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActivityDueDate__c</fullName>
        <description>expose Task.ActivityDate</description>
        <label>Activity Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apt_Re_Keyed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apt Re-Keyed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balance_Due__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Balance Due</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Community_Orientation_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community Orientation Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complete_Move_in_Checklist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete Move in Checklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discuss_Kingsley_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discuss Kingsley Survey?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Acknowledgement of Notice to Vacate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Priority Relinquish Discount Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Notice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Remittance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Policy Revoke Discount Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Report Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copy of Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined Application Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delinquency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disposition Revoke Discount Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAP Contract or Renewal Addendum to HAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing Authority Renewal Rent Increase Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete Application Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Introduction to Statement Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Rent Notice (2 Day)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Rent Revoke Discount Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOA - Pending Discount Revocation Reminder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lottery - Add to Waitlist Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lottery - General Apartment Offer Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lottery - Notice Of Acceptance Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lottery - Selected In Lottery Notification Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lottery - Specific Apartment Offer Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Information Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move-In - Initial Certification Packet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move-In - Non-Qualification Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move-in PAF and License Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notice to Quit (3 Day)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Recipients__c</fullName>
        <label>Email Recipients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if a call is escalated within the CCC to a Supervisor, TL, or Manager.</description>
        <inlineHelpText>Check here if the call was escalated from another associate within the CCC.</inlineHelpText>
        <label>Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>File_Link__c</fullName>
        <description>Create a hyperlink to access the file referenced in the File Path field.</description>
        <formula>If (LEN(File_Path__c) &lt; 1, null,HYPERLINK(&quot;file://api_nt5/data/ccc/Resident_Communication/&quot; &amp;  File_Path__c, &quot;View File&quot;))</formula>
        <label>File Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Path__c</fullName>
        <description>USer will past file path here.</description>
        <label>File Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Getting_to_Know_Apt_Pamphlet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Getting to Know Apt Pamphlet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Helpful_Moving_Tips__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Helpful Moving Tips</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inspect_all_Rentable_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inspect all Rentable Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Magnet_on_Refrigerator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Magnet on Refrigerator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mention_Kingsley_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you told the resident that a Move Out Survey will be sent to them?</inlineHelpText>
        <label>Mention Kingsley Survey?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>TEXT(MONTH(DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Created</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Resident_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Most Recent Resident Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Move_In_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Move-In Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Move_In_Inspection_Checklist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Move-In Inspection Checklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notice_of_Preliminary_Inspection_Right__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notice of Preliminary Inspection Right</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Originated_From__c</fullName>
        <formula>IF( 
OR( 
CreatedBy.ProfileId = &quot;00e60000000r2eO&quot;, 
CreatedBy.ProfileId = &quot;00e60000000r9t4&quot;, 
CreatedBy.ProfileId = &quot;00e60000000qfNp&quot;), 
&quot;Community&quot;, &quot;CCC&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Originated From</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <picklist>
            <controllingField>Subject_Sub_Category__c</controllingField>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response - Send Move Out Packet</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Could Not Save - Send Move Out Packet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saved - Remove Notice From MRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spoke with Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated - Do Not Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mgmt Request to Vacate - Send Move Out Packet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preliminary_Inspection_Entered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preliminary Inspection Entered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prepare_Move_in_Packet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prepare Move in Packet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reached_By__c</fullName>
        <label>Reached By</label>
        <picklist>
            <controllingField>Subject_Sub_Category__c</controllingField>
            <picklistValues>
                <fullName>Phone</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renters_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renters Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule_CO_inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Schedule Certificate of Occupancy inspection (if applicable)</inlineHelpText>
        <label>Schedule CO inspection (if applicable)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule_lead_based_paint_inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Schedule lead-based paint inspection (if applicable)</inlineHelpText>
        <label>Schedule lead-based paint inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Event Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject_Sub_Category__c</fullName>
        <label>Sub-Category</label>
        <picklist>
            <controllingField>AVB_Type__c</controllingField>
            <picklistValues>
                <fullName>Abandoned Items Disposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abandoned Items Stored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acknowledgement of Notice to Vacate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustment Case Clarification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AH - Billing Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AH - Missing Documents Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AH - Move-in Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AH - Notice to Vacate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AH - Payment Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AH - Renewal Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AH - Renter&apos;s Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AH - Saferent Results</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AH - Verification of Rent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartment Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Priority - Relinquish Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorized Caller Added/Removed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto-Rent or UserID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avalon Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Dispute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Email 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Email 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Inquiry - not a dispute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Transfers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balcony/Hallway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Dispute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSA - Notice to Vacate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certification Packet Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in NTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Billing Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Dispute</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this Task has been assigned to a user automatically.</description>
        <label>Task Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Queue__c</fullName>
        <label>Task Queue for Assignment</label>
        <picklist>
            <picklistValues>
                <fullName>Prior Resident Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Services Queue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Subject__c</fullName>
        <label>Task Subject</label>
        <picklist>
            <picklistValues>
                <fullName>Initial Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return Visit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update_Community_On_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Community On Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Created</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Tasks_in_Task_Queues</fullName>
        <columns>Task_Queue__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Subject_Sub_Category__c</columns>
        <columns>AVB_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Task_Queue__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Task_Assigned__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Tasks in Task Queues</label>
    </listViews>
    <listViews>
        <fullName>Glendale_s</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subject_Sub_Category__c</field>
            <operation>equals</operation>
            <value>Initial Visit,Return Visit</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>ca068</value>
        </filters>
        <label>Glendale&apos;s</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>My_Team_Tasks</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>OWNER_ROLE</field>
            <operation>equals</operation>
            <value>{!$Profile.Id}</value>
        </filters>
        <label>My Team Tasks</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <listViews>
        <fullName>activities__Overdue_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Overdue Tasks</label>
    </listViews>
    <listViews>
        <fullName>activities__Today_Overdue_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Today + Overdue Tasks</label>
    </listViews>
    <listViews>
        <fullName>activities__TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>activities__Tomorrow_s_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Tomorrow&apos;s Tasks</label>
    </listViews>
</CustomObject>